<resources>
    <string name="app_name">기차 예매 시스템</string>
    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>

    <string name="departure_station">출발역</string>
    <string name="arrival_station">도착역</string>

    <string name="date_select">날짜 선택</string>

    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="adult_count">%d</string>
    <string name="child_count">%d</string>
    <string name="old_count">%d</string>

    <string name="search_for_train">열차 조회하기</string>
</resources>